Welded arrow diagrams and relations scaffold

--- a/macros.tex
+++ b/macros.tex
@@ -17,8 +17,8 @@
 \newcommand*{\poscross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_positive_crossing.pdf}}}
 \newcommand*{\negcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_negative_crossing.pdf}}}
 \newcommand*{\virtcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_virtual_crossing.pdf}}}
-\newcommand*{\semivertposcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_positive_crossing.pdf}}}
-\newcommand*{\semivertnegcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_negative_crossing.pdf}}}
+\newcommand*{\semivirtposcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_positive_crossing.pdf}}}
+\newcommand*{\semivirtnegcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_negative_crossing.pdf}}}
 
 % T4T and T1T graphics
 \newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_south.pdf}}}
@@ -49,6 +49,8 @@
 \newcommand{\stu}{\texttt{STU}}
 
 \newcommand{\ihx}{\texttt{IHX}}
+
+\newcommand{\tc}{\texttt{TC}}
 
 
 % Boldface tags for knot sums
