--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -278,7 +278,7 @@ Recall from Definition \ref{def:integration-theory-modules} (b) that \(C\singula
 	\begin{enumerate}
 		\item A \textbf{chord diagram} of order \(m\) is an element of \(\singularknots_{m} / \partial \singularknots_{m + 1}\). This is equivalent to 
 		% TODO: [Zsuzsi] Consider the phrasing "A combinatorial description of such an element is"
-		an oriented circle with a distinguished set of \(m\) pairs of points, considered up to orientation-preserving diffeomorphism of the circle. In figures, chords are drawn between each pair of points. The vector space spanned by chord diagrams of order \(m\) is denoted \(\mathcal{D}_{m}\), so \(\mathcal{D}_{m} = C\singularknots_{m}\).
+		an oriented circle with a distinguished set of \(m\) unordered pairs of points, considered up to orientation-preserving diffeomorphism of the circle. In figures, chords are drawn between each pair of points. The vector space spanned by chord diagrams of order \(m\) is denoted \(\mathcal{D}_{m}\), so \(\mathcal{D}_{m} = C\singularknots_{m}\).
 		\item The \textbf{chord diagram of an \(m\)-singular knot \(k\)}, denoted \(\sigma(k)\) is the chord diagram formed by the following process. Place \(2m\) points on an oriented circle, two for each singular point of \(k\). Traversing both \(k\) and the circle, label the points on the circle in the order in which the singular points of \(k\) are traversed. Each label is given twice, pairing up the \(2m\) points, forming \(\sigma(k)\).
 		% TODO: [Zsuzsi] Would it be simpler to say "the chord diagram formed by pairing the two preimages of each singular point along the circle domain of $K$"?
 	\end{enumerate}
