--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -256,7 +256,7 @@ are in \(P\singularknots_{m} = \ker \partial_{m}\). Any nonvanishing functionals
 	An invariant \(f\) of \(m\)-singular knots integrates to an invariant of \((m - 1)\)-singular knots if and only if it satisfies \textup{\ref{eq:T4Tstar}}.
 \end{theorem}
 
-For example, in this case corresponding unframed version of Stanford's theorem reads: \textit{An invariant \(f\) of \(m\)-singular unframed knots integrates to an invariant of \((m - 1)\)-singular unframed knots if and only if it satisfies \textup{\ref{eq:T4Tstar}} and \textup{\ref{eq:T1Tstar}}.}
+For example, the corresponding unframed version of Stanford's theorem reads: \textit{An invariant \(f\) of \(m\)-singular unframed knots integrates to an invariant of \((m - 1)\)-singular unframed knots if and only if it satisfies \textup{\ref{eq:T4Tstar}} and \textup{\ref{eq:T1Tstar}}.}
 
 \begin{proof}[sketch]
 	% TODO: Fill out Stanford's integration homotopy proof
