Coadjoint action and Ig exposition + defn

--- a/references.bib
+++ b/references.bib
@@ -408,3 +408,14 @@
 	pages = {531-542},
 	year = {2000},
 }
+
+@article{quantum-groups,
+	author = {Drinfeld, V. G.},
+	title = {Quantum groups},
+	journal = {Journal of Soviet Mathematics},
+	volume = {41},
+	number = {2},
+	pages = {898--915},
+	year = {1988},
+	publisher = {Springer},
+}
